--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -50,17 +50,7 @@
   </div>
   <a href="localhost:3000/user_fund_project/projects/<%=@project.id%>">
   <div  style="display:table-cell; " >
-      <button class="btn btn-primary" onclick="redirect()" style="align-content: center;text-align: center; align-items: center">
-          Send your love & support!
-          <br>
-          (And money)
-          <br>
-          <i class="material-icons">plus_one</i> <i class="material-icons">favorite_border</i>
-      </button>
-    <script>
-      function redirect() {
-      }
-    </script>
+    <%= link_to "Send your love & support! \n (And money)", "/user_fund_project/projects/"+ @project.id.to_s, class: "btn btn-primary"%>
   </div>
   </a>
 </div>
