--- a/app/views/user_fund_projects/new.html.erb
+++ b/app/views/user_fund_projects/new.html.erb
@@ -41,7 +41,7 @@
             <tr>
               <td><%= p.name %></td>
               <td><%= p.amount%></td>
-              <td><button class="btn btn-primary btn-xs" onclick="buypromise(<%=p.amount%>)">Buy!</button> </td>
+              <td><%= link_to "Buy!", "/user_buy_promise_project?project_id=" + params[:project_id].to_s + ";amount=" + p.amount.to_s, class: "btn btn-primary btn-xs" , method: :post%></td>
             </tr>
             <% end %>
           </tbody>
