--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,7 +1,12 @@
 <p id="notice"><%= notice %></p>
-
+<% if @projects.blank? %>
+  <div class="alert alert-warning"> Sorry, there are no projects matching your search.</div>
+  <% end %>
 <h1>Projects</h1>
-
+<%= form_tag(projects_path, :method => "get", id: "search-form") do %>
+  <%= text_field_tag :search, params[:search], placeholder: "Search Projects" %>
+  <%= submit_tag "Search", :name => nil %>
+<% end %>
 <table class="table table-striped table-hover">
   <thead>
     <tr>
