--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -47,7 +47,9 @@ div {
 }
 
 #notice {
-  color: green;
+  text-align: center;
+  color: green!important;
+  padding: 10px!important;
 }
 
 .field_with_errors {
